<?xml version="1.0"?>
<package format="2">
  <name>drone_vision</name>
  <version>0.0.0</version>
  <description>The drone_vision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ksrve@mail.ru">ksrve</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- C++ support -->
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- OpenCV support -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- Message support -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>

  <!-- ROS messages/services types -->  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
